kubernetes/wpn-nginx.yml
---
# https://erpdev.atlassian.net/browse/WPN-28
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpn-nginx
  namespace: wordpress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wpn-nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wpn-nginx
    spec:
      containers:
        - name: wpn-nginx
          image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-025
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: php-configmap
              mountPath: /wp/inventory/
            - name: php-secret
              mountPath: /wp/credentials/
            - name: wp-uploads
              mountPath: /data/
              subPath: wp-uploads
      imagePullSecrets:
        - name: svc0041-rke2-puller-pull-secret
      restartPolicy: Always
      volumes:
        - name: php-configmap
          configMap:
            name: wpn-nginx
        - name: php-secret
          secret:
            secretName: wpn-nginx
        - name: wp-uploads
          persistentVolumeClaim:
            claimName: wp-uploads

---
apiVersion: v1
kind: Service
metadata:
  name: wpn-nginx-service
  namespace: wordpress-test
  labels:
    app: wpn-nginx
  annotations:
    authors: isas-fsd
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: wpn-nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpn-nginx
  namespace: wordpress-test
spec:
  rules:
    - host: "wpn.fsd.team"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: wpn-nginx-service
                port:
                  number: 80
